[package]
name = "gpscandump"
version = "1.0.0"
edition = "2021"

description = "Logs GPS and CAN-bus data and synchronizes the CAN-data with the GPS-data"
license-file = "LICENSE"
documentation = "https://docs.rs/gpscandump"
respository = "https://github.com/tsabelmann/gpscandump-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10"}
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
socketcan = "1.7.0"
serialport = {version = "4.0.1", default-features = false}
nmea = "0.0.11"
chrono = "0.4"