[package]
name = "gpscandump"
license = "MIT or Apache-2"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
categories = ["command-line-utilities", "data-logging", "embedded", "data-analysis"]
description = "Logs GPS and CAN-bus data and synchronizes the CAN-data with the GPS-data"
documentation = "https://docs.rs/gpscandump"
homepage = "https://github.com/tsabelmann/gpscandump-rs"
keywords = ["gps", "can", "can-bus", "serial", "serial-port", "csv"]
repository = "https://github.com/tsabelmann/gpscandump-rs"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10"}
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
socketcan = "1.7.0"
serialport = {version = "4.0.1", default-features = false}
nmea = "0.0.11"
chrono = "0.4"

[[bin]]
name = "gpscandump"
path = "src/main.rs"
doc = false
test = false
bench = false
